k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui-deployment
  labels:
    app: web-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-ui
  template:
    metadata:
      labels:
        app: web-ui
    spec:
      containers:
        - name: web-ui
          image: us-central1-docker.pkg.dev/forward-script-438915-v8/hrmis-artifact-registry/web-ui
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: web-ui
spec:
  selector:
    app: web-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
