k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ui-ingress
  labels:
    app: web-ui
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: nginx
  rules:
    - #host: ""
      http:
        paths:
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: web-ui
                port:
                  number: 80
